<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    android:elevation="1dp">

    <TextView
        android:id="@+id/welcome_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/form_cont"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/main"
        android:textSize="30sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/form_cont"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:paddingLeft="40dp"
        android:paddingRight="40dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/login_input"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="7dp"
                    android:paddingRight="7dp"
                    android:paddingTop="7dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        app:srcCompat="@mipmap/avatar" />
                </RelativeLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/form_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:backgroundTint="@color/main"
                    android:ems="10"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/edit_cursor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_input"
                android:paddingBottom="5dp"
                android:paddingEnd="5dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="5dp"
                android:weightSum="5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:paddingBottom="7dp"
                    android:paddingRight="7dp"
                    android:paddingTop="7dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerInside"
                        app:srcCompat="@mipmap/locked" />
                </RelativeLayout>

                <View
                    android:layout_width="1px"
                    android:layout_height="match_parent"
                    android:background="@android:color/darker_gray" />

                <EditText
                    android:id="@+id/form_pass"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:backgroundTint="@color/main"
                    android:ems="10"
                    android:hint="@string/pass"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:textColor="@color/text_color"
                    android:textColorHint="@android:color/darker_gray"
                    android:textCursorDrawable="@drawable/edit_cursor" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp">

                <Button
                    android:id="@+id/sign_up_btn"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/login_btn"
                    android:text="@string/enter"
                    android:textColor="@color/white"
                    android:textSize="18sp" />
            </TableRow>

        </TableLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/form_cont"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_password" />
</RelativeLayout>